--- a/CheetSheet.Rmd
+++ b/CheetSheet.Rmd
@@ -25,7 +25,10 @@ beispielfunction <- function(...){
 }
 ```
 
+
+Data Tables
 ```{r}
+
 # Beispiel Liste von Vektoren
 vectors <- list(c(1, 2, 3), c(4, 5, 6), c(7, 8, 9))
 
@@ -44,5 +47,13 @@ print(result)
 ```{r}
 gsub("[^a-zA-Z]", "", input) #Alle Zeichen bis auf Buchstaben ersetzen 
   cleanInput == paste(rev(strsplit(cleanInput, "")[[1]]), collapse = "")# nochmal anschauen
+
+```
+
+
+Data Tables
+```{r}
+#entfernen einer Spalte
+b[, "id" := NULL]
 ```
 
