--- a/CheetSheet.Rmd
+++ b/CheetSheet.Rmd
@@ -1,6 +1,14 @@
+Cheetsheet für R
 
-apply, vapply
+PS02
+```{r}
+#Funktionen kennenlernen
+  all() # alle Werte sind TRUE
+  any() # mindestens ein Wert ist TRUE
+  ifelse() # if else in einer Funktion
+```
 
+PS03
 ```{r}
 # apply, das die erste nicht 0 in einer Matrix such und deren Spalte zurückgibt 
 # 1 zeilenweiße 2 spaltenweiße C(1,2) beides
@@ -13,11 +21,25 @@ apply(matrix, c(1,2), function(x) which(x != 0)[[1]])
 
 vapply(matrix, sum, matrix())
 
+# Beispiel Liste von Vektoren
+vectors <- list(c(1, 2, 3), c(4, 5, 6), c(7, 8, 9))
+
+#BSP für selber definierte Funktion
+threshold <- 5
+
+# Anwenden der Funktion
+result <- vapply(vectors, function(x) x > threshold, logical(length(vectors[[1]])))
+
+
+lapply # gibt eine Liste zurück
+
 ```
 
-Funktionen
-
+PS04
 ```{r}
+cleanInput == paste(rev(strsplit(cleanInput, "")[[1]]), collapse = "") #paste sehr mächtig um Strings zu formatieren
+supressWarnings() # unterdrückt Warnungen
+
 # mit ... können beliebig viele Argumente übergeben werden um die abzugreifen muss man sie erst als List oder DF bezeichnen (habs mir DFs noch nicht ausprobiert)
 
 beispielfunction <- function(...){
@@ -25,24 +47,13 @@ beispielfunction <- function(...){
 }
 ```
 
-```{r}
-# Beispiel Liste von Vektoren
-vectors <- list(c(1, 2, 3), c(4, 5, 6), c(7, 8, 9))
-
-# Schwellenwert
-threshold <- 5
-
-# Anwenden der Funktion
-result <- vapply(vectors, function(x) x > threshold, logical(length(vectors[[1]])))
-
-print(result)
-
-```
-
-
-
+PS05
+Funktionen 
 ```{r}
 gsub("[^a-zA-Z]", "", input) #Alle Zeichen bis auf Buchstaben ersetzen 
-  cleanInput == paste(rev(strsplit(cleanInput, "")[[1]]), collapse = "")# nochmal anschauen
+
+#matches aufgeben
+matches <- gregexpr("(?<!^)(?<!\\.\\s)([A-Z])\\w+", text, perl = TRUE) #RegEx kann natürlich angepasst werden
+found <- regmatches(text, matches)
 ```
 
